Added gallery images to project

--- a/MeetechApp.csproj
+++ b/MeetechApp.csproj
@@ -120,6 +120,14 @@
     <None Include="MeetechApp_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\image1.jpg" />
+    <Content Include="Assets\image2.jpg" />
+    <Content Include="Assets\image3.jpg" />
+    <Content Include="Assets\image4.jpg" />
+    <Content Include="Assets\image5.jpg" />
+    <Content Include="Assets\image6.jpg" />
+    <Content Include="Assets\image7.jpg" />
+    <Content Include="Assets\image8.jpg" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
